k8s/app/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: scienchan-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: karag/karag-backend:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: app-data
          mountPath: /app/backend/data
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: app-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: scienchan-app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: karag/karag-frontend:latest
        ports:
        - containerPort: 3000
