k8s/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: scienchan-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: scienchan-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
